--- a/src/main/resources/templates/page.html
+++ b/src/main/resources/templates/page.html
@@ -2,6 +2,124 @@
 	<head>
 	</head>
 	<body>
-		<div>Thymeleaf</di>
+		<div> Thymeleaf </div>
+		<table border="1">
+			<tr th:each="gorod : ${context}" >
+				<tr th:text = " ${gorod.getId()} " /> 	
+				<tr th:text = " ${gorod.getCity()} " /> 	
+				<tr th:text = " ${gorod.getCountry()} " /> 	
+				<tr th:text = " ${gorod.getPopulation()} " /> 	
+			</tr>
+		</table>
+			
+		<form method="POST" action="/page/add">
+			<table>
+				<tr>
+					<td>
+						Create new city
+					</td>
+				</tr>
+				<tr>
+					<td>
+						City: 
+					</td>
+					<td>
+						<input type="text" name="city">
+					</td>
+				</tr>
+				<tr>
+					<td> 
+						Country: 
+					</td>
+					<td> 
+						<input type="text" name="country">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						Population:	
+					</td>
+					<td>
+						<input type="number" name="population">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<input type="submit">
+					</td>
+				</tr>
+			</table>
+		</form>
+
+		<form method="POST" action="/page/update">
+			<table>
+				<tr>
+					<td>
+						Update existing city
+					</td>
+				</tr>
+				<tr>
+					<td>
+						Id:
+					</td>
+					<td>
+						<input type="number" name="id">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						City: 
+					</td>
+					<td>
+						<input type="text" name="city">
+					</td>
+				</tr>
+				<tr>
+					<td> 
+						Country: 
+					</td>
+					<td> 
+						<input type="text" name="country">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						Population:	
+					</td>
+					<td>
+						<input type="number" name="population">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<input type="submit">
+					</td>
+				</tr>
+			</table>
+		</form>
+
+		<form method="POST" action="/page/delete">
+			<table>
+				<tr>		
+					<td>
+						Delete city:						
+					</td>
+				</tr>		
+				<tr>		
+					<td>
+						Id:						
+					</td>
+					<td>
+						<input type="number" name="id">		
+					</td>
+				</tr>		
+				<tr>		
+					<td>
+						<input type="submit">
+					</td>
+				</tr>		
+			</table>
+		</form>
 	</body>
+	
 </html>
