crud_db, form, template are done. Look forward to session and cookie

--- a/src/main/resources/templates/page.html
+++ b/src/main/resources/templates/page.html
@@ -5,13 +5,12 @@
 		<div> Thymeleaf </div>
 		<table border="1">
 			<tr th:each="gorod : ${context}" >
-				<tr th:text = " ${gorod.getId()} " /> 	
-				<tr th:text = " ${gorod.getCity()} " /> 	
-				<tr th:text = " ${gorod.getCountry()} " /> 	
-				<tr th:text = " ${gorod.getPopulation()} " /> 	
+				<td th:text = " ${gorod.getId()} " /> 	
+				<td th:text = " ${gorod.getCity()} " /> 	
+				<td th:text = " ${gorod.getCountry()} " /> 	
+				<td th:text = " ${gorod.getPopulation()} " /> 	
 			</tr>
 		</table>
-			
 		<form method="POST" action="/page/add">
 			<table>
 				<tr>
