--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,10 +5,10 @@
 		<h1>Login</h1>
 		<form method="POST" action="/login/process">
 			<div>
-				<input type="text" name="login">
+				<input type="text" name="login" th:value="${login}">
 			</div>
 			<div>
-				<input type="password" name="password">
+				<input type="password" name="password" th:value="${password}">
 			</div>
 			<div>
 				<input type="submit">
